@startuml

!include ./_commons.style



package uutf {

  class Assertions {
    + {static} assertTrue(bool)
    + {static} assertFalse(bool)
    + {static} assertEquals(int, int)
  }

  abstract class Test {
    ~ run()
    __
    # {abstract} run(ResultCollector)
  }
  note top
    Composite
  end note

  abstract class TestCase {
    # run(ResultCollector)
    __
    # {abstract} test()
  }

  abstract class TestSuite {
    # run(ResultCollector)
    __
    # addTest(Test)
  }

  TestSuite *--> "1..n\ncases" Test

  class TestRunner {
    + run(Test): ResultCollector
    + runAndPrint(Test)
  }

  TestRunner .. Test

  Test <|-- TestCase
  Test <|-- TestSuite

  class ResultCollector {
    + toString(): String
    __
    ~ addResult(TestResult)
  }
  note bottom: Builder

  ResultCollector *-> "1..n\nresults" TestResult

  Assertions .[hidden]. ResultCollector

  enum STATUS {
    PASSED
    FAILED
    ERRORED
    __
    - char symbol
    __
    - this(char)
    __
    + toString(): String
  }

  class TestResult {
    - String name
    + STATUS
    __
    + this(String)
    __
    + setStatus(STATUS)
    + getStatus(): STATUS
    __
    + toString(): String
  }

TestResult .. STATUS
TestRunner .. ResultCollector

}

package java.lang {
  class AssertionError
}

AssertionError .. Assertions





@enduml
